Добавил авторизацию Spring Security